--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1139,6 +1139,45 @@ a {
 .cid-shTgZuTGOF .row {
   justify-content: center;
 }
+.cid-sit1eLWl1N {
+  padding-top: 5rem;
+  padding-bottom: 3rem;
+  background-image: url("../../../assets/images/mbr-6.jpeg");
+}
+.cid-sit1eLWl1N .mbr-section-title {
+  color: #ffffff;
+}
+.cid-sit1jn8IDY {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-sit1jn8IDY .counter-container ul {
+  margin: 0;
+  list-style: none;
+  padding-left: 2.5rem;
+}
+.cid-sit1jn8IDY .counter-container ul li {
+  margin-bottom: 1rem;
+  list-style: none;
+  position: relative;
+  padding-left: 1rem;
+}
+.cid-sit1jn8IDY .counter-container ul li:before {
+  position: absolute;
+  left: -40px;
+  content: "";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  background-color: #6592e6;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-top: 5px;
+  content: "✓";
+}
 .cid-shTd7voejp {
   padding-top: 5rem;
   padding-bottom: 3rem;
